--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.application'
-}
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 
+}
 android {
     compileSdk 31
 
@@ -25,9 +26,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    def fragment_version = "1.4.1"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -38,4 +44,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    // Java language implementation
+    implementation "androidx.fragment:fragment:$fragment_version"
+
 }
