--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 
 }
 android {
@@ -33,6 +34,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:21.1.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.3'
     def fragment_version = "1.4.1"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
