--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-messaging:21.1.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.3'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'com.google.firebase:firebase-analytics:20.1.0'
     def fragment_version = "1.4.1"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -49,5 +49,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     // Java language implementation
     implementation "androidx.fragment:fragment:$fragment_version"
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
