--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SBTS">
         <activity
+            android:name=".activities.AdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DriverActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.RegisterUser"
             android:exported="false" />
         <!--
