add attendee , driver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SBTS">
         <activity
+            android:name=".activities.RegisterAttendee"
+            android:exported="false" />
+        <activity
             android:name=".activities.RegisterDriver"
             android:exported="false" />
         <activity
