--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,20 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SBTS">
+        android:theme="@style/Theme.SBTS"
+        tools:node="merge">
+        <activity
+            android:name=".activities.Payment_Activity"
+            android:exported="true" >
+            <intent-filter android:autoVerify="true" tools:targetApi="m">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Accepts URIs that begin with "example://gizmos” -->
+                <data android:scheme="https"
+                    android:host="sbts2022.com" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activities.RegisterStudent"
             android:exported="false" />
@@ -61,7 +74,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
+        <!--Only add it if you need Auto OTP reading feature is enabled-->
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity
             android:name=".activities.PasswordActivity"
             android:exported="false" />
